<resources>
    <string name="app_name">MessengerApp</string>
    <string name="login_password_placeholder">Enter Your Password</string>
    <string name="login_nickname_placeholder">Enter Your Nickname</string>
    <string name="login_txt"><strong>SIGN IN</strong></string>
    <string name="login_not_registered_txt">Not registered?</string>
    <string name="register_txt"><strong>SIGN UP</strong></string>
    <string name="profession_placeholder">What I do</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="filter_placeholder">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_update_txt">Update</string>
    <string name="user_search_username_placeholder">name</string>
    <string name="chat_txt_placeholder">Message</string>
</resources>