<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.login.LoginActivity">

    <ImageView
            android:layout_width="@dimen/login_icon_size"
            android:layout_height="@dimen/login_icon_size"
            android:src="@drawable/avatar_image_placeholder"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp" />

    <EditText
            android:hint="@string/login_nickname_placeholder"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:id="@+id/login_nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="40dp"
            android:background="@drawable/input_text"
            android:backgroundTint="@color/mainTxtBackgroundColor"
            android:textColor="@color/mainTxtColor"
            android:gravity="center"/>

    <EditText
            android:hint="@string/login_password_placeholder"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:id="@+id/login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_nickname"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_text"
            android:backgroundTint="@color/mainTxtBackgroundColor"
            android:textColor="@color/mainTxtColor"
            android:gravity="center"
            android:inputType="textPassword"/>

    <Button
            android:text="@string/login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            android:layout_marginTop="20dp" />

    <TextView
            android:text="@string/login_not_registered_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintBottom_toTopOf="@+id/login_register_button"
            android:layout_marginBottom="5dp"
            android:textColor="@color/mainTxtColor"/>

    <com.google.android.material.button.MaterialButton
            android:text="@string/register_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_register_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/mainTxtColor"
            app:strokeColor="@color/mainTxtColor"
            app:strokeWidth="1dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>