<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.register.RegisterActivity">

    <ImageView
            android:layout_width="@dimen/login_icon_size"
            android:layout_height="@dimen/login_icon_size"
            android:src="@drawable/avatar_image_placeholder"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="75dp" />

    <EditText
            android:hint="@string/login_nickname_placeholder"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:id="@+id/register_nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:layout_marginTop="40dp"
            android:background="@drawable/input_text"
            android:backgroundTint="@color/mainTxtBackgroundColor"
            android:textColor="@color/mainTxtColor"
            android:gravity="center"/>

    <EditText
            android:hint="@string/login_password_placeholder"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:id="@+id/register_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_nickname"
            android:layout_marginTop="10dp"
            android:background="@drawable/input_text"
            android:backgroundTint="@color/mainTxtBackgroundColor"
            android:textColor="@color/mainTxtColor"
            android:gravity="center"
            android:inputType="textPassword"/>

    <EditText
            android:hint="@string/profession_placeholder"
            android:layout_width="340dp"
            android:layout_height="48dp"
            android:id="@+id/register_profession"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_text"
            android:backgroundTint="@color/mainTxtBackgroundColor"
            android:textColor="@color/mainTxtColor"
            android:gravity="center"/>

    <Button
            android:text="@string/register_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_profession"
            android:layout_marginTop="40dp" />



</androidx.constraintlayout.widget.ConstraintLayout>